Fixed issues with contrast and improved page accessibility

--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@ select {
 
 button {
     padding: 10px 20px;
-    background-color: #007BFF;
+    background-color: #006FFA;
     color: #fff;
     border: none;
     border-radius: 5px;
